--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ Requests==2.30.0
 streamlit==1.22.0
 streamlit_lottie==0.0.3
 streamlit_timeline==0.0.2
-llama-index>=0.8.5
+llama-index==0.8.53
 llama-cpp-python==0.2.11
 nltk==3.8.1
